[package]
name = "imgui-dx9-renderer"
version = "0.8.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2021"
description = "DirectX 9 renderer for the imgui crate"
homepage = "https://github.com/Veykril/imgui-dx9-renderer"
repository = "https://github.com/Veykril/imgui-dx9-renderer"
license = "MIT"
readme = "README.md"
categories = ["gui", "rendering"]

[dependencies]
imgui = "0.9.0"
winapi = { version = "0.3", features = ["d3d9", "d3d9types", "windef", "winerror"] }
wio = "0.2"

[dev-dependencies]
imgui = "0.9.0"
imgui-winit-support = "0.9.0"
raw-window-handle = "0.3.0"
winit = "0.27.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
